refactor: custom memory for friends
